# Analisis-URL-

./: CMakeLists.txt  main.cpp  recursos.rc
datos/: Fichero.cpp  Fichero.h  Ficheros.cpp
datos/urlPadre/: urlPadre.txt
negocios/: Cola.cpp  Cola.h  Peticion.cpp  Peticion.h
presentacion/: Interfaz.cpp  Interfaz.h  estilos.css
